test_regress/t/t_mailbox_bad.out
%Error: t/t_mailbox_bad.v:12:13: Class method 'bad_method' not found in class 'mailbox__p1'
                               : ... note: In instance 't'
   12 |       if (m.bad_method() != 0) $stop;
      |             ^~~~~~~~~~
%Error: Exiting due to
